--- a/main.css
+++ b/main.css
@@ -34,6 +34,14 @@
 	text-align: center;
 }
 
+.quiz-container h1 {
+	margin-top: 3em;
+	margin-bottom: 2em;
+	padding: 0.5em;
+	font-size: 1.7em;
+}
+
+
 .stats-button {
 	border-style: solid;
 	border-color: black;
